--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,29 @@
 *.db
-*.exe
-*.dll
+
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
+*.a
+*.so
 
-# VSCode
-.vscode
+# Folders
+_obj
+_test
 
-# Exclude from upgrade
-upgrade/*.c
-upgrade/*.h
+# Architecture specific extensions/prefixes
+*.[568vq]
+[568vq].out
+
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
+*.exe
+*.test
+*.prof
+/bin
 
 .idea/
